QOL features
- Downgraded main launcher project to java 8
- Added automatic finding of java 21